2018-06-29 Release 4.9
	- when reading JSON, flatten any non-scalar values into JSON
	  strings
	- add a filter for extracting values from JSON strings using JSONPath

2018-05-05 Release 4.8.3
	- handle Google Drive "open" and "file" URLs
	- normalise whitespace for the count filter (so that "Guinea" and
	  "Guinea " won't count separately)
	- fix validation test for trailing whitespace

2018-05-31 Releases 4.8.1, 4.8.2
	- hotfixes for installation problem with 4.8 (in a clean install)

2018-05-31 Release 4.8
	- add __version__ attribute to module
	- refactor the hxl.validation module for better testing and
	  maintainability
	- add a new default schema with useful default tests
	- allow multiple tag patterns (comma-separated) for #valid_tag in
	  a HXL schema
	- add a spelling validation test
	- add a numeric-outlier validation test
	- refactor CacheFilter to preserve row numbers
	- add ability to generate a JSON-style validation report easily
	  via hxl.validate()
	- new requirement: python-io-wrapper
	- RowFilter (with_rows, without_rows) no longer ignores empty
	  cells; that will occasionally give some different results
	- when multiple columns match a row query, it will succeed with at
	  least one success
	- fixed a bug parsing "is" row queries
	- handle more Google Sheets URLs
	- recognise datetime formats as dates

2018-05-11 Release 4.7.1
	- hotfix for bug in date parsing

2018-04-30 Release 4.7
	- remove obsolete Python2 compatibility code
	- added source_row_number and source_column_number to support validation
	- add wildcard support to tag patterns, so that we can use
	  patterns like "*" or "*+f-children"
	- revamped date handling to support partial dates like "2018-01"
	  or "2018", and also special notation like "2018W05" or "2018Q1"
	- add min and max methods to hxl.model.Dataset
	- HXL validation reports a validation error when a #valid_value+url is not usable
	- HXL validation now reports proper column